completed-Saving the token and setting it in the cookie - Practice assignment #1

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "start": "servor --reload"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "servor": "^4.0.2"
   }
 }
